# jpod-client

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  articles.txt  conanfile.txt  inspiration.txt  keyboard.txt  stream-descriptor.txt  test-ops  test-ops.txt
cmake/: utilities.cmake
include/: bootstrap.h
include/core/commands/: base_command.h  command.h  command_registry.h  formatter.h  internal_contracts.h  sub_command.h
include/core/connections/: connection.h  connection_listener.h  frame.h
include/core/operations/: operation.h  operation_listener.h
include/core/sessions/: details.h  interactive_session.h  interactive_session_listener.h  internal.h  rpc_session.h  rpc_session_listener.h  session.h  staged_session.h  staged_session_listener.h
include/domain/containers/: container_commands.h  create_command.h  list_command.h  log_command.h  payloads.h  remove_command.h  shell_command.h  start_command.h  stop_command.h  terminal.h  terminal_listener.h  tmt.h
include/domain/containers/shell/: terminal.h  terminal_listener.h
include/domain/images/: build_command.h  details_command.h  image_command.h  import_command.h  list_command.h  parser.h  payloads.h  pull_command.h  push_command.h  remove_command.h
src/: CMakeLists.txt  main.cc
src/core/commands/: command_registry.cc
src/core/connections/: connection.cc
src/core/operations/: operation.cc
src/core/sessions/: interactive_session.cc  rpc_session.cc  session.cc  staged_session.cc
src/domain/containers/: container_commands.cc  create_command.cc  list_command.cc  log_command.cc  remove_command.cc  shell_command.cc  start_command.cc  stop_command.cc  terminal.cc  tmt.c
src/domain/containers/shell/: terminal.cc
src/domain/images/: build_command.cc  details_command.cc  image_command.cc  import_command.cc  list_command.cc  pull_command.cc  push_command.cc  remove_command.cc
